<resources>
    <string name="app_name">TakeApp</string>
    <string name="create_account">Create Account</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="first_name">First Name</string>
    <string name="email">Email Address</string>
    <string name="add_image">Add Image</string>
    <string name="last_name">Last Name</string>
    <string name="re_enter_your_password">Re-enter your password</string>
    <string name="picture">Picture</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create">Create</string>
</resources>