<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Lname"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEFEFE"
    tools:context=".CreateAccActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="210dp"
        android:layout_height="65dp"
        android:layout_marginEnd="211dp"
        android:background="@drawable/background_habits"
        android:gravity="center"
        android:text="@string/create_account"
        android:textColor="#ffffff"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/Profile"
        android:layout_width="71dp"
        android:layout_height="73dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/profile"
        android:backgroundTint="#0C0C0C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/pickImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#068151"
        android:text="@string/add_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Profile" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pickImage" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName" />

    <EditText
        android:id="@+id/password"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email" />

    <EditText
        android:id="@+id/ConfirmPassword"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/re_enter_your_password"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="114dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#068151"
        android:text="@string/create"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ConfirmPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>
